# OsuAI

./: .gitignore  Makefile  OsuEnv.py  README.md  Uma Abordagem de Aprendizado por Reforço para Osu! v2.0.pptx  Uma Abordagem de Aprendizado por Reforço para Osu!.pptx  ddpg_experiment.py  environment.py  main.py  osu-ai-implementation.md  play.py  pyproject.toml  requirements.txt  tokens.py
.github/workflows/: python-app.yml
osupy/: Note.py  NoteType.py  OsuPy.py  Point.py  __init__.py  beatmap.py  bezier_curve.py  effect.py  env.py  linear.py  model.py  perfect_circle.py  render.py  test.py  typing.py
osupy/model/: ClickerAction.py  ClickerObservation.py  ClickerReward.py  MoverAction.py  MoverObservation.py  MoverReward.py  __init__.py  clicker.py  clicker_test.py  mover.py  mover_test.py
tests/: context.py  test.osu  test_basic.py
